compiler: Support for i18n through $"string" syntax (generates .pot, requires libintl); documentor: Chinese localization contributed by liqi

--- a/documentor/Makefile
+++ b/documentor/Makefile
@@ -61,7 +61,7 @@ OFLAGS = -m32 \
 	 -L../obj/$(PLATFORM)/bin \
 	 -L../obj/$(PLATFORM)/lib
 
-LIBS = -lecere $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
+LIBS = -lecere -lintl $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
 UPXFLAGS = -9 -q
 
