compiler/libec/Makefile: made precompiled files optional. to test compilation without precompiled simply use rm -r compiler/libec/precompiled; make

--- a/compiler/libec/Makefile
+++ b/compiler/libec/Makefile
@@ -98,7 +98,9 @@ all: objdir $(TARGET)
 objdir:
 ifneq "$(wildcard $(OBJ))" "$(OBJ)"
 	$(call mkdirq,$(OBJ))
+ifeq "$(wildcard precompiled)" "precompiled"
 	$(call cpq,$(PRECOMPILED_SOURCES),$(OBJ))
+endif
 endif
 
 $(OBJ)$(MODULE).main.ec: $(SYMBOLS) $(COBJECTS)
