compiler/libec: Tweak for last patch to work on Linux, @cp was failing, worked without the 'cd libec &&'

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -2,8 +2,8 @@
 .SILENT:
 
 CONFIG := release
-OBJ = obj/$(CONFIG).$(PLATFORM)/
-PRECOMPILED_SOURCES = precompiled/expression.c precompiled/grammar.c precompiled/type.c
+OBJ = libec/obj/$(CONFIG).$(PLATFORM)/
+PRECOMPILED_SOURCES = libec/precompiled/expression.c libec/precompiled/grammar.c libec/precompiled/type.c
 
 include ../include.mk
 
@@ -12,7 +12,7 @@ all: ecp ecc ecs
 libec:
 	@$(call echo,Building 2nd stage libec...)
 ifeq "$(wildcard libec/precompiled)" "libec/precompiled"
-	cd libec && $(call cpq,$(PRECOMPILED_SOURCES),$(OBJ))
+	$(call cpq,$(PRECOMPILED_SOURCES),$(OBJ))
 endif
 	cd libec && $(MAKE)
 
