compiler/libec: last tweak for last patch to work on a clean (no compiler/libec/obj/debug.platform/ dir present) snapshot. for example, after a git clone or after a make distclean.

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -12,6 +12,9 @@ all: ecp ecc ecs
 libec:
 	@$(call echo,Building 2nd stage libec...)
 ifeq "$(wildcard libec/precompiled)" "libec/precompiled"
+ifneq "$(wildcard $(OBJ))" "$(OBJ)"
+	$(call mkdirq,$(OBJ))
+endif
 	$(call cpq,$(PRECOMPILED_SOURCES),$(OBJ))
 endif
 	cd libec && $(MAKE)
